syntax = "proto3";

package conumer;
option go_package = "github.com/995933447/bucketmq/pkg/rpc/consumer";

service Consumer {
    rpc Consume(ConsumeReq) returns (ConsumeResp) {}
}

message ConsumeReq {
    string topic = 1;
    string subscriber = 2;
    string consumer = 3;
    bytes data = 4;
    uint32 retried_cnt = 5;
    uint32 timeout_ms = 6;
}

message ConsumeResp {
}

message ConnSNSrvReq {
    string s_n = 1;
    string consumer = 2;
}

message ConnSNSrvResp {
    string sn = 1;
}